<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/main_bg"
    tools:context="com.rollup.journey.activity.MainActivity">

    <LinearLayout android:id="@+id/main_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="300dp">
        <TextView android:id="@+id/main_text1"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:gravity="center"
            android:textSize="24sp"
            android:text="@string/str_main_text1"
            android:drawableTop="@mipmap/main_item_icon"
            android:background="@mipmap/main_item"/>
        <TextView android:id="@+id/main_text2"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/str_main_text2"
            android:gravity="center"
            android:textSize="24sp"
            android:drawableTop="@mipmap/main_item_icon2"
            android:background="@mipmap/main_item2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/main_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView android:id="@+id/main_text3"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/str_main_text3"
            android:gravity="center"
            android:textSize="24sp"
            android:drawableTop="@mipmap/main_item_icon3"
            android:background="@mipmap/main_item3"/>
        <TextView android:id="@+id/main_text4"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/str_main_text4"
            android:gravity="center"
            android:textSize="24sp"
            android:drawableTop="@mipmap/main_item_icon4"
            android:background="@mipmap/main_item4"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <include layout="@layout/bottom_item_state"/>
    </LinearLayout>

</RelativeLayout>
