<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mbar="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dce3eb">

    <com.rollup.journey.customview.TitleView
        android:id="@+id/blue_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        mbar:text_title="@string/str_blue_link">
    </com.rollup.journey.customview.TitleView>

    <ProgressBar android:id="@+id/blue_progress"
        android:layout_below="@id/blue_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <TextView android:id="@+id/blue_btn1"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="130dp"
        android:background="@mipmap/blue_btn_n"
        android:gravity="center"
        android:text="@string/str_blue_link_n"
        android:textSize="24sp"/>

    <TextView android:id="@+id/blue_btn2"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="50dp"
        android:background="@mipmap/blue_btn_n"
        android:gravity="center"
        android:text="@string/str_blue_link_no_save"
        android:textSize="24sp"/>

    <ListView android:id="@+id/blue_list"
        android:layout_below="@id/blue_progress"
        android:layout_above="@id/blue_btn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f8f8f8">
    </ListView>
</RelativeLayout>