<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:zzq="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main2_newmsg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    tools:context="com.rollup.journey.activity.Main2NewmsgActivity">

    <com.rollup.journey.customview.TitleView
        android:id="@+id/main2_msg_new_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        zzq:text_title="@string/str_main_message_new">
    </com.rollup.journey.customview.TitleView>

    <RelativeLayout android:layout_below="@id/main2_msg_new_title"
        android:id="@+id/main2_msg_new_receiver"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/str_main_message_receiver"
            android:textSize="18sp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:scaleType="centerInside"
            android:src="@mipmap/main_msg_add_person" />
    </RelativeLayout>

    <LinearLayout android:id="@+id/bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <include layout="@layout/bottom_item_state"/>
    </LinearLayout>

    <view android:id="@+id/line"
        android:layout_above="@id/bottom"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        class="com.rollup.journey.customview.TitleView"/>

    <LinearLayout
        android:id="@+id/main2_msg_new_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_above="@id/line"
        android:background="#ebebeb"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="15dp"
        android:paddingTop="10dp">

        <EditText
            android:id="@+id/main2_msg_new_edit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="@drawable/main_build_edit_bg"
            android:gravity="center"
            android:hint="@string/str_main_message_edit1" />

        <TextView
            android:id="@+id/main2_msg_new_send"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="15dp"
            android:text="@string/str_main_message_send1"
            android:textColor="#0BAB09"
            android:textSize="18sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/main2_msg_new_listView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/main2_msg_new_receiver"
        android:layout_above="@id/main2_msg_new_layout"
        android:background="#FFFFFF">
    </ListView>

</RelativeLayout>
